--- a/css/style.css
+++ b/css/style.css
@@ -1393,7 +1393,7 @@ footer {
 }
 
 .btn,
-#subscribe-button {
+#subscribe-button, #conference-button {
     border: none;
     /*padding: 12px 16px;*/
     font-weight: 500;
@@ -1408,7 +1408,7 @@ footer {
 }
 
 .btn:hover,
-#subscribe-button:hover {
+#subscribe-button:hover, #conference-button:hover {
     opacity: 1;
     font-weight: 700;
     color: white;
@@ -1420,32 +1420,6 @@ footer {
     padding: 12px 16px;
 }
 
-.btn,
-#conference-button {
-    border: none;
-    /* padding: 12px 16px; */
-    font-weight: 500;
-    font-size: 5vh;
-    height: auto;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    margin-right: 10px;
-    letter-spacing: 2px;
-    color: white;
-    background-color: #dd4f33;
-    opacity: 0.9;
-}
-
-.btn:hover,
-#conference-button:hover {
-    opacity: 1;
-    font-weight: 700;
-    color: white;
-    background-color: #dd4f33;
-    border: none;
-}
 
 .footer-title {
     letter-spacing: 0.08em;
