--- a/css/style.css
+++ b/css/style.css
@@ -1420,6 +1420,14 @@ footer {
     padding: 12px 16px;
 }
 
+#conference-button {
+    padding: 12px 15px;
+    border-radius: 5px;
+    margin: 0 auto;
+    text-align: center;
+    display: table;
+    width: auto;
+}
 
 .footer-title {
     letter-spacing: 0.08em;
